--- a/portfolio/templates/streams/two_thirds_text_gallery_block.html
+++ b/portfolio/templates/streams/two_thirds_text_gallery_block.html
@@ -1,13 +1,13 @@
 {% load wagtailimages_tags wagtailcore_tags %}
 
 <div class="small-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8">
+    <div class="container container-responsive">
+        <div class="row d-flex align-items-center">
+            <div class="col-lg-8">
                 {% image self.image fill-800x550 as img %}
                 <img src="{{ img.url }}" alt="{{ img.alt }}" style='width: 100%; height: auto;'>
             </div>
-            <div class="justify-content-center d-flex flex-column col-md-4 {% if self.text_alignment == 'left' %}order-first{% endif %}">
+            <div class="justify-content-center d-flex flex-column col-lg-4 {% if self.text_alignment == 'left' %}order-lg-first{% endif %}">
                 {{ self.content }}
                 {% if self.link.url %}
                     <a href="{{ self.link.url }}" class="btn btn-primary">{{ self.link.link_text }}</a>
