--- a/portfolio/templates/streams/simple_richtext_block.html
+++ b/portfolio/templates/streams/simple_richtext_block.html
@@ -1,6 +1,6 @@
 <div class="container large-section">
    <div class="row justify-content-center">
-      <div class="col-md-8">
+      <div class="col-md-8 custom-richtext">
         {{ self }}
       </div>
    </div>
