Twitter Social Media setting

--- a/portfolio/templates/includes/footer.html
+++ b/portfolio/templates/includes/footer.html
@@ -33,10 +33,10 @@
                     </svg>
                 </a>
             {% endif %}
-            {% if settings.site_settings.SocialMediaSettings.snapchat %}
-                <a class="footer-social-icon" href="{{ settings.site_settings.SocialMediaSettings.snapchat }}">
+            {% if settings.site_settings.SocialMediaSettings.twitter %}
+                <a class="footer-social-icon" href="{{ settings.site_settings.SocialMediaSettings.twitter }}">
                     <svg>
-                        <use href="#snapchat"></use>
+                        <use href="#twitter"></use>
                     </svg>
                 </a>
             {% endif %}
